--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body, #app {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  background-color: #334155;
+  overflow-x: hidden;
+}
